--- a/book.html
+++ b/book.html
@@ -104,10 +104,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 						<h1> Book </h1>
 						<br><br>
-						  <video width="100%" height="240" autoplay controls loop>
-  <source src="book.nicole2.mp4" type="video/mp4">
-  
-</video> 
+						  <iframe width="420" height="315" src="//www.youtube.com/embed/MSP0kZBxAPQ" frameborder="0" allowfullscreen></iframe>
 
 
 
